include/gen/gramatica/gIncludeParser.java
// Generated from C:/Users/USER/Google Drive/CC - PUC/5º semestre/COMP - COMPILADORES/Programas/Compiladores/includev2/src/gramatica\gInclude.g4 by ANTLR 4.9.1
package gramatica;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gIncludeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, TIPO_TEXTO=47, TIPO_NUMERO=48, TIPO_VERACIDADE=49, VERACID=50, 
		TEXTO=51, SEP=52, NUM=53, COMENTL=54, COMENTB=55, ID=56;
	public static final int
		RULE_listaSentenca = 0, RULE_listaDeclaracao = 1, RULE_sentencaComposta = 2, 
		RULE_sentenca = 3, RULE_sentencaCaso = 4, RULE_sentencaPadrao = 5, RULE_sentencaSelecao = 6, 
		RULE_sentencaIteracao = 7, RULE_declaracaoFuncao = 8, RULE_expressaoSentenca = 9, 
		RULE_expressao = 10, RULE_listaExpressao = 11, RULE_expressaoPrimaria = 12, 
		RULE_expressaoPosfixa = 13, RULE_expressaoLista = 14, RULE_expressaoFuncao = 15, 
		RULE_expressaoIncremento = 16, RULE_expressaoMultiplicativa = 17, RULE_expressaoAditiva = 18, 
		RULE_expressaoComparativa = 19, RULE_expressaoLogica = 20, RULE_expressaoAtribuicao = 21, 
		RULE_expressaoAtribuicaoLista = 22, RULE_expressaoDeclaracao = 23, RULE_constante = 24, 
		RULE_numero = 25, RULE_texto = 26, RULE_veracidade = 27, RULE_identificador = 28, 
		RULE_tipoNada = 29, RULE_rTipo = 30, RULE_prefixoLista = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"listaSentenca", "listaDeclaracao", "sentencaComposta", "sentenca", "sentencaCaso", 
			"sentencaPadrao", "sentencaSelecao", "sentencaIteracao", "declaracaoFuncao", 
			"expressaoSentenca", "expressao", "listaExpressao", "expressaoPrimaria", 
			"expressaoPosfixa", "expressaoLista", "expressaoFuncao", "expressaoIncremento", 
			"expressaoMultiplicativa", "expressaoAditiva", "expressaoComparativa", 
			"expressaoLogica", "expressaoAtribuicao", "expressaoAtribuicaoLista", 
			"expressaoDeclaracao", "constante", "numero", "texto", "veracidade", 
			"identificador", "tipoNada", "rTipo", "prefixoLista"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'caso'", "':'", "'padrao'", "'se'", "'('", "')'", 
			"'entao'", "'senao'", "'senao se'", "'checar'", "'enquanto'", "'repita'", 
			"'ate que'", "'para k de '", "' ate '", "','", "'passo'", "'funcao '", 
			"' recebe'", "'retorna '", "';'", "'['", "']'", "'mostrar'", "'++'", 
			"'--'", "'*'", "'/'", "'//'", "'%'", "'+'", "'-'", "'=='", "'!='", "'>'", 
			"'<'", "'>='", "'<='", "'e'", "'ou'", "'inverso'", "'='", "'nada'", "'lista de '", 
			"'texto'", "'numero'", "'veracidade'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "TIPO_TEXTO", 
			"TIPO_NUMERO", "TIPO_VERACIDADE", "VERACID", "TEXTO", "SEP", "NUM", "COMENTL", 
			"COMENTB", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gInclude.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gIncludeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ListaSentencaContext extends ParserRuleContext {
		public ListaSentencaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaSentenca; }
	 
		public ListaSentencaContext() { }
		public void copyFrom(ListaSentencaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RListaSentencaListaContext extends ListaSentencaContext {
		public ListaSentencaContext listaSentenca() {
			return getRuleContext(ListaSentencaContext.class,0);
		}
		public SentencaContext sentenca() {
			return getRuleContext(SentencaContext.class,0);
		}
		public RListaSentencaListaContext(ListaSentencaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRListaSentencaLista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRListaSentencaLista(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRListaSentencaLista(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RListaSentencaUnicaContext extends ListaSentencaContext {
		public SentencaContext sentenca() {
			return getRuleContext(SentencaContext.class,0);
		}
		public RListaSentencaUnicaContext(ListaSentencaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRListaSentencaUnica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRListaSentencaUnica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRListaSentencaUnica(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaSentencaContext listaSentenca() throws RecognitionException {
		return listaSentenca(0);
	}

	private ListaSentencaContext listaSentenca(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ListaSentencaContext _localctx = new ListaSentencaContext(_ctx, _parentState);
		ListaSentencaContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_listaSentenca, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new RListaSentencaUnicaContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(65);
			sentenca();
			}
			_ctx.stop = _input.LT(-1);
			setState(71);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RListaSentencaListaContext(new ListaSentencaContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_listaSentenca);
					setState(67);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(68);
					sentenca();
					}
					} 
				}
				setState(73);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ListaDeclaracaoContext extends ParserRuleContext {
		public ListaDeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracao; }
	 
		public ListaDeclaracaoContext() { }
		public void copyFrom(ListaDeclaracaoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RListaDeclaracaoUnicaContext extends ListaDeclaracaoContext {
		public ExpressaoDeclaracaoContext expressaoDeclaracao() {
			return getRuleContext(ExpressaoDeclaracaoContext.class,0);
		}
		public RListaDeclaracaoUnicaContext(ListaDeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRListaDeclaracaoUnica(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRListaDeclaracaoUnica(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRListaDeclaracaoUnica(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RListaDeclaracaoContext extends ListaDeclaracaoContext {
		public ListaDeclaracaoContext listaDeclaracao() {
			return getRuleContext(ListaDeclaracaoContext.class,0);
		}
		public ExpressaoDeclaracaoContext expressaoDeclaracao() {
			return getRuleContext(ExpressaoDeclaracaoContext.class,0);
		}
		public RListaDeclaracaoContext(ListaDeclaracaoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRListaDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRListaDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRListaDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDeclaracaoContext listaDeclaracao() throws RecognitionException {
		return listaDeclaracao(0);
	}

	private ListaDeclaracaoContext listaDeclaracao(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ListaDeclaracaoContext _localctx = new ListaDeclaracaoContext(_ctx, _parentState);
		ListaDeclaracaoContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_listaDeclaracao, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new RListaDeclaracaoUnicaContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(75);
			expressaoDeclaracao();
			}
			_ctx.stop = _input.LT(-1);
			setState(81);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RListaDeclaracaoContext(new ListaDeclaracaoContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_listaDeclaracao);
					setState(77);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(78);
					expressaoDeclaracao();
					}
					} 
				}
				setState(83);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class SentencaCompostaContext extends ParserRuleContext {
		public SentencaCompostaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencaComposta; }
	 
		public SentencaCompostaContext() { }
		public void copyFrom(SentencaCompostaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RSentencaCompostaContext extends SentencaCompostaContext {
		public List<ListaDeclaracaoContext> listaDeclaracao() {
			return getRuleContexts(ListaDeclaracaoContext.class);
		}
		public ListaDeclaracaoContext listaDeclaracao(int i) {
			return getRuleContext(ListaDeclaracaoContext.class,i);
		}
		public List<ListaSentencaContext> listaSentenca() {
			return getRuleContexts(ListaSentencaContext.class);
		}
		public ListaSentencaContext listaSentenca(int i) {
			return getRuleContext(ListaSentencaContext.class,i);
		}
		public RSentencaCompostaContext(SentencaCompostaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRSentencaComposta(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRSentencaComposta(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRSentencaComposta(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentencaCompostaContext sentencaComposta() throws RecognitionException {
		SentencaCompostaContext _localctx = new SentencaCompostaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentencaComposta);
		int _la;
		try {
			_localctx = new RSentencaCompostaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(T__0);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << T__11) | (1L << T__12) | (1L << T__13) | (1L << T__15) | (1L << T__19) | (1L << T__25) | (1L << T__42) | (1L << T__45) | (1L << TIPO_TEXTO) | (1L << TIPO_NUMERO) | (1L << TIPO_VERACIDADE) | (1L << VERACID) | (1L << TEXTO) | (1L << NUM) | (1L << ID))) != 0)) {
				{
				setState(87);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(85);
					listaDeclaracao(0);
					}
					break;
				case 2:
					{
					setState(86);
					listaSentenca(0);
					}
					break;
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(92);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentencaContext extends ParserRuleContext {
		public SentencaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenca; }
	 
		public SentencaContext() { }
		public void copyFrom(SentencaContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RSentencaExpressaoContext extends SentencaContext {
		public ExpressaoSentencaContext expressaoSentenca() {
			return getRuleContext(ExpressaoSentencaContext.class,0);
		}
		public RSentencaExpressaoContext(SentencaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRSentencaExpressao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRSentencaExpressao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRSentencaExpressao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RSentencaSelecaoContext extends SentencaContext {
		public SentencaSelecaoContext sentencaSelecao() {
			return getRuleContext(SentencaSelecaoContext.class,0);
		}
		public RSentencaSelecaoContext(SentencaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRSentencaSelecao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRSentencaSelecao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRSentencaSelecao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RSentencaIteracaoContext extends SentencaContext {
		public SentencaIteracaoContext sentencaIteracao() {
			return getRuleContext(SentencaIteracaoContext.class,0);
		}
		public RSentencaIteracaoContext(SentencaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRSentencaIteracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRSentencaIteracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRSentencaIteracao(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RSentencaFuncaoContext extends SentencaContext {
		public DeclaracaoFuncaoContext declaracaoFuncao() {
			return getRuleContext(DeclaracaoFuncaoContext.class,0);
		}
		public RSentencaFuncaoContext(SentencaContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRSentencaFuncao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRSentencaFuncao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRSentencaFuncao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentencaContext sentenca() throws RecognitionException {
		SentencaContext _localctx = new SentencaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_sentenca);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__25:
			case T__42:
			case T__45:
			case TIPO_TEXTO:
			case TIPO_NUMERO:
			case TIPO_VERACIDADE:
			case VERACID:
			case TEXTO:
			case NUM:
			case ID:
				_localctx = new RSentencaExpressaoContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(94);
				expressaoSentenca();
				}
				break;
			case T__5:
			case T__11:
				_localctx = new RSentencaSelecaoContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				sentencaSelecao();
				}
				break;
			case T__12:
			case T__13:
			case T__15:
				_localctx = new RSentencaIteracaoContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(96);
				sentencaIteracao();
				}
				break;
			case T__19:
				_localctx = new RSentencaFuncaoContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(97);
				declaracaoFuncao();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentencaCasoContext extends ParserRuleContext {
		public SentencaCasoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencaCaso; }
	 
		public SentencaCasoContext() { }
		public void copyFrom(SentencaCasoContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RSentencaCasoFilhaContext extends SentencaCasoContext {
		public ExpressaoPrimariaContext expressaoPrimaria() {
			return getRuleContext(ExpressaoPrimariaContext.class,0);
		}
		public ListaSentencaContext listaSentenca() {
			return getRuleContext(ListaSentencaContext.class,0);
		}
		public RSentencaCasoFilhaContext(SentencaCasoContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).enterRSentencaCasoFilha(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gIncludeListener ) ((gIncludeListener)listener).exitRSentencaCasoFilha(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gIncludeVisitor ) return ((gIncludeVisitor<? extends T>)visitor).visitRSentencaCasoFilha(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentencaCasoContext sentencaCaso() throws RecognitionException {
		SentencaCasoContext _localctx = new SentencaCasoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sentencaCaso);
		try {
			_localctx = new RSentencaCasoFilhaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(T__2);
			setState(101);
			expressaoPrimaria();
			setState(102);
			match(T__3);
			setState(103);
			listaSentenca(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
